# ai-archive

./: .env.example  .gitignore  DESCRITIVO.md  README.md  pyproject.toml  run_chatgpt_pipeline.sh
.claude/: settings.local.json
config/: selectors.chatgpt.yaml  selectors.gemini.yaml  settings.example.yaml
src/ai_archive/: __init__.py  cli.py  config.py  db.py  logging_config.py  models.py
src/ai_archive/auth/: browser_session.py  cdp_attach.py  manual_login.py  storage_state.py
src/ai_archive/browser/: base.py  dom_helpers.py  screenshots.py  selectors.py
src/ai_archive/drive/: api.py  mirror.py  oauth.py
src/ai_archive/importers/: __init__.py  gemini_html.py  gemini_scanner.py
src/ai_archive/pipeline/: cluster.py  crawl.py  curate.py  dedupe.py  drive_sync.py  export.py  manifests.py  normalize.py  scorer.py
src/ai_archive/providers/: base.py  chatgpt.py  chatgpt_backfill.py  gemini.py
src/ai_archive/reports/: doctor.py  summary.py
src/ai_archive/utils/: files.py  hashing.py  markdown.py  retry.py  text.py  time.py
tests/: conftest.py  test_cluster.py  test_curate.py  test_dedupe.py  test_hashing.py  test_manifests.py  test_normalize.py  test_selectors.py
tests/fixtures/: chatgpt_sample.html  gemini_sample.html
tools/: gemini_sync.sh
tools/windows/: launch_chrome_debug.bat  launch_chrome_debug.ps1
